<resources>
  <string name="app_name">RestaurantRater</string>
  <string name="hint_restaurantTitle">Restaurant Title</string>
  <string name="hint_restaurantDescription">Description </string>
  <string name="button_addRestaurant">Add Restaurant</string>
  <string name="menu_addRestaurant">Add</string>
  <string name="menu_cancelRestaurant">Cancel</string>
  <string name="enter_restaurant_title"> Please enter a Restaurant Title </string>
  <string name="save_restaurant"> Save Restaurant </string>
  <string name="button_addImage"> Add Image </string>
  <string name="select_restaurant_image">Select restaurant image</string>
  <string name="change_restaurant_image">Change restaurant image</string>
  <string name="button_location">Set Location</string>
  <string name="title_activity_maps">Map</string>
  <string name="menu_deleteRestaurant">Delete</string>
  <string name="title_activity_restaurant_maps">Map of all Restaurants</string>

</resources>
